fixed spacing on latestEp container

--- a/src/Components/LatestEpisodes/LatestEpisodes.css
+++ b/src/Components/LatestEpisodes/LatestEpisodes.css
@@ -5,7 +5,6 @@
     margin: auto;
     margin-top: 60px;
     max-width: 1200px;
-    padding: 0 1.875rem;
 }
 
 .latestEpHeader {
